Enroll trip checks for time conflicts of 1 hour gap; Fix CSS scrolling

--- a/web-frontend/css/styles.css
+++ b/web-frontend/css/styles.css
@@ -9,6 +9,15 @@ body, html {
     justify-content: center;
     background: #f0f4f8;
 }
+.user-menu{
+    max-height: 50vh; /* Adjust the max-height as needed */
+    overflow-y: auto; /* This allows scrolling vertically */
+}
+
+.main-content {
+    max-height: 50vh; /* Adjust the max-height as needed */
+    overflow-y: auto; /* This allows scrolling vertically */
+}
 
 .auth-container {
     display: flex;
